Fix image scaling problem (whitespace)

--- a/src/sections/featured.module.scss
+++ b/src/sections/featured.module.scss
@@ -34,6 +34,10 @@
     > div {
         width: 100%;
     }
+
+    > .coverImage {
+        height: 100%;
+    }
 }
 
 .overlay {
